# dev2bread-adapter-pcb

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  pyproject.toml
.cursor/rules/: no-assumed-short-circuits.mdc
.github/workflows/: ci.yml
adapter_gen/: __init__.py  _venv_bootstrap.py  board_profile.py  branding.py  easyeda_layers.py  geometry.py  neck_cyan_waypoints.py  neck_j3_bottom_preview.py  preview_board_style.py  preview_waypoint_style.py  reverser_head_stubs.py  row_reverser_emit.py  row_reverser_geometry.py  silk_bake.py  silk_preview.py  stem_neck_emit.py  stem_neck_routing_mil.py  svg_preview.py  top_row_cyan_waypoints.py  wide_head_stub_stem_join_preview.py
dev2bread_adapter_pcb.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
docs/: PROMPT_CONTEXT.md  adapter-routing-invariants.md  architecture-emitters.md  design-prompt-breadboard-adapter.md  dev2bread-adapter-pcb.md  easyeda-adapter-44pin-dev2bread.devkitc1.standard.json  easyeda-adapter-44pin-dev2bread.numeric.standard.json  easyeda-adapter-44pin-dev2bread.standard.json  easyeda-branding-pro-vs-standard.md  for-ai-assistant.md  plan-easyeda-standard-image-format.md  preview-generator-parity.md  python-clean-code-tracker.md  python-clean-code.md  top-row-reverser-routing.md
docs/data/: devkitc1_gpio_silk_paths.json  numeric_silk_paths.json
resources/: esp32-s3-devkitc-1.devkitc1.standard.epcb
resources/boards/: esp32-devkit-v1.toml  esp32-s3-devkitc-1.toml  esp32-wroom-32.toml  example-14pin-7-per-row.toml  generic-44pin-devkit.toml
scripts/: bake_devkitc_gpio_silk_paths.py  branding_box_from_easyeda_json.py  generate_easyeda_adapter_pcb.py  preview_adapter_board.py  preview_matplotlib_fonts.py  row_reverser_svg.py  verify_board_outputs.py
tests/: test_board_id_offsets.py  test_silk_pin_label_color.py
tests/baselines/: out_manifest.sha256
