[project]
name = "dev2bread-adapter-pcb"
version = "0.0.0"
description = "T-shaped dev-board to breadboard adapter — EasyEDA JSON + SVG preview"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["adapter_gen*"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["adapter_gen", "scripts"]

[tool.ruff.lint]
select = [
    "E4",   # import
    "E7",   # statement
    "E9",   # runtime
    "F",    # pyflakes
    "I",    # isort
]
ignore = [
    "E402", # module import not at top (scripts tweak sys.path)
]

[tool.ruff.lint.isort]
known-first-party = ["adapter_gen"]
