[project]
name = "dev2bread-adapter-pcb"
version = "0.0.0"
description = "T-shaped dev-board to breadboard adapter — EasyEDA JSON + SVG preview"
readme = "README.md"
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "mypy>=1.8",
    "pre-commit>=4.0",
    "pytest>=8.0",
    "ruff>=0.8",
]

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["adapter_gen*"]

[tool.ruff]
line-length = 88
target-version = "py311"
src = ["adapter_gen", "scripts", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # bugbear
    "SIM",  # flake8-simplify
    "C4",   # comprehensions
    "PIE",  # flake8-pie
    "PERF", # perflint
    "RUF",  # ruff-specific
]
ignore = [
    "E402",  # import after sys.path (scripts)
    "PERF401",  # list.append loops — extend is not always clearer for PCB emitters
    "E501",  # line length (88 soft; avoid huge churn)
    "RUF001", "RUF002", "RUF003",  # unicode × − ’ in docs/comments (intentional)
    "SIM108",  # ternary vs if/else — prefer readability for geometry
    "T201",    # print — CLI / user messaging
    "PLR",     # pylint refactor (too many branches/args/statements)
    "PLC0415", # lazy imports inside functions
    "S101",    # assert — used for type narrowing / tests
    "TRY",     # try/except style (large churn)
    "EM",      # exception messages
    "D",       # pydocstyle not enabled; docstrings per CONTRIBUTING
]
[tool.ruff.lint.per-file-ignores]
"scripts/**/*.py" = ["S603", "S606"]  # subprocess / os.exec — intentional CLIs

[tool.ruff.lint.isort]
known-first-party = ["adapter_gen"]

[tool.mypy]
python_version = "3.11"
files = ["adapter_gen", "scripts"]
explicit_package_bases = true
warn_unused_ignores = true

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
